MDEV-3997: Querying a Cassandra table on a server with query cache enabled is likely to cause problems - Disable query cache for Cassandra tables.